Fix schedule on small devices

--- a/loki/hack_conf/static/assets/css/style.css
+++ b/loki/hack_conf/static/assets/css/style.css
@@ -918,3 +918,7 @@ ul.gold-sponsors-list li{
 img.co-speaker {
   margin-top: 1em;
 }
+
+.schedule-panel {
+  min-height: 150px;
+}
